bug: fix drag-n-drop container overflow scrollbar during drag preview

--- a/src/app/shared/components/drag-and-drop-tree/drag-and-drop-tree.component.scss
+++ b/src/app/shared/components/drag-and-drop-tree/drag-and-drop-tree.component.scss
@@ -10,6 +10,7 @@
 
   background: #fff;
   opacity: 0.3;
+  overflow: hidden;
 }
 
 .drop-inside {
